2007-12-18  Sam Steingold  <sds@gnu.org>

	DESCRIBE shows contents of STRING-STREAMs
	* stream.d (error_string_stream): add
	(STRING-INPUT-STREAM-INDEX, GET-OUTPUT-STREAM-STRING): use it
	(STRING-STREAM-STRING): add
	* constsym.d, subr.d (string_stream_string): add
	* describe.lisp (*squeeze-string-max*, *squeeze-string-section*)
	(squeeze-string): add
	(describe-object): use squeeze-string and string-stream-string to
	describe string streams

2007-12-18  Sam Steingold  <sds@gnu.org>

	* record.d (error_closure): add
	(SYS::CLOSURE-NAME, (SETF SYS::CLOSURE-NAME)): use it
	(slot_in_arglist, SYS::%MAKE-INSTANCE): add a cast to avoid
	the "value computed is not used" warning

2007-12-17  Sam Steingold  <sds@gnu.org>

	* lispbibl.d, pathname.d, spvw_memfile.d, time.d (decoded_time_t):
	translate field name from German to English

2007-12-16  Sam Steingold  <sds@gnu.org>

	* spvw.d, spvw_memfile.d (quit_instantly): renamed from quit_sofort
	* io.d (spaces): rename argument anzahl to scount
	(paren_open): rename from klammer_auf
	(paren_close): rename from klammer_zu
	* intelem.d (set_max32_Dptr): use if instead of (?:) to avoid three
	"value computed is not used" warnings
	* makemake.in (LIBS): do not add FFCALL_LIBS, it is done by configure

2007-12-08  Reini Urban  <rurban@x-ray.at>

	* makemake.in: rename --list-modules to --help-modules,
	add gtk2 to the list of suggested modules in the comments
	<32_trans1>
	* aridecl.d, compelem.d, flo_konv.d, realelem.d: translate comments

2007-12-15  Sam Steingold  <sds@gnu.org>

	* foreign.d: #include <avcall.h> & <callback.h> as "<>" and not '""'
	and wrap then in extern "C" to restore C++ compilation

2007-12-15  Sam Steingold  <sds@gnu.org>

	* error.d (MAKE_CHECK_REPLACEMENT): new macro
	(check_list_replacement, check_array_replacement)
	(check_vector_replacement, check_posfixnum_replacement)
	(check_integer_replacement, check_char_replacement)
	(check_string_replacement, check_stream_replacement)